# kiRenderer

./: .clang_complete  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  build.bat  build.sh
include/: PNGLib.h  Vector2.h  kiColor.h  kiDisplay.h  kiError.h  kiMath.h  kiRect2.h  kiRenderer.h  kiTexture.h  kiTimer.h  kiTypes.h  kiUtil.h  kiVector.h  macros.h  types.h  zlib.h
scripts/: image_test.py  pyproject.toml
src/: Math.cpp  PNGLib.cpp  Timer.cpp  kiColor.cpp  kiError.cpp  kiRenderer.cpp  kiTexture.cpp  main.cpp  zlib.cpp
